Creacion Servicio de Tarjeta y Pagina de Home

--- a/CajeroAutomaticoAPI/CajeroAutomaticoAPI/appsettings.json
+++ b/CajeroAutomaticoAPI/CajeroAutomaticoAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=CajeroAutomaticoDB;Trusted_Connection=SSPI;MultipleActiveResultSets=true;Trust Server Certificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
